--- a/app/views/peripherals/edit.html.erb
+++ b/app/views/peripherals/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Peripheral</h1>
+<h3>Editing Peripheral</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @peripheral %> |
-<%= link_to 'Back', peripherals_path %>
+<%= link_to 'Show', @peripheral, :class =>"btn btn-large btn-default" %> |
+<%= link_to 'Back', peripherals_path, :class =>"btn btn-large btn-default" %>
