--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Employee</h1>
+<h3>New Employee</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', employees_path %>
+<%= link_to 'Back', employees_path, :class =>"btn btn-large btn-default" %>
