--- a/app/views/peripherals/new.html.erb
+++ b/app/views/peripherals/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Peripheral</h1>
+<h3>New Peripheral</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', peripherals_path %>
+<%= link_to 'Back', peripherals_path, :class =>"btn btn-large btn-default" %>
