--- a/app/views/peripherals/show.html.erb
+++ b/app/views/peripherals/show.html.erb
@@ -5,5 +5,5 @@
   <%= @peripheral.name %>
 </p>
 
-<%= link_to 'Edit', edit_peripheral_path(@peripheral) %> |
-<%= link_to 'Back', peripherals_path %>
+<%= link_to 'Edit', edit_peripheral_path(@peripheral), :class =>"btn btn-large btn-default" %> 
+<%= link_to 'Back', peripherals_path, :class =>"btn btn-large btn-default" %>
